[project]
name = "medismart-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.5",
    "langchain>=0.1.0",  # Add this (core LangChain package)
    "langchain-core>=0.1.0",  # Add this (for tools and other core components)
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.8",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "twilio>=9.10.1",
    "uvicorn>=0.40.0",
]